src/test/deca/context/valid/created/testDeclField/declFieldInit.deca
class A{
    int x = 0;
    float y = 1;
    float z = 1.1;
    boolean w = true;
    boolean d = false;
}